src/objects/Logistic_Need__c.object
<CustomObject>
    <fields>
        <fullName>Events__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Logistic Needs</relationshipLabel>
        <relationshipName>Logistic_Needs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logistic_Need_Types__c</fullName>
        <label>Logistic Need Types</label>
        <picklist>
            <picklistValues>
                <fullName>F&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Logistic Needs</relationshipLabel>
        <relationshipName>Logistic_Needs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Logistic Need</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Logistic Need Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logistic Needs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>